[gd_scene load_steps=11 format=3 uid="uid://jy70t1gs78le"]

[ext_resource type="Shader" uid="uid://dfc1mrmc3ay6e" path="res://shaders/gift.gdshader" id="1_5du7x"]
[ext_resource type="Texture2D" uid="uid://b341wtc2kd6f2" path="res://assets/box_texture.jpg" id="2_anslr"]
[ext_resource type="Texture2D" uid="uid://bovi5a5yr63iw" path="res://assets/wrapping_paper_texture.jpg" id="3_162jx"]
[ext_resource type="PackedScene" uid="uid://cvfx2n6wl8hmn" path="res://assets/Lowpoly Stickman Rigged and Animated for Games/animation_copy.glb" id="4_anslr"]
[ext_resource type="Script" uid="uid://bhq1g4hwq381n" path="res://scripts/wrap_game.gd" id="5_wrap_game"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6x1my"]
sky_top_color = Color(0.65333, 0.7144133, 0.79711413, 1)
sky_horizon_color = Color(1.836022, 1.8512928, 1.871968, 1)
ground_bottom_color = Color(1, 1, 1, 1)
ground_horizon_color = Color(1.836022, 1.8512928, 1.871968, 1)

[sub_resource type="Sky" id="Sky_pj4qa"]
sky_material = SubResource("ProceduralSkyMaterial_6x1my")

[sub_resource type="Environment" id="Environment_jv2ku"]
background_mode = 2
sky = SubResource("Sky_pj4qa")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q2njf"]
render_priority = 0
shader = ExtResource("1_5du7x")
shader_parameter/base_tex = ExtResource("2_anslr")
shader_parameter/top_tex = ExtResource("3_162jx")

[sub_resource type="BoxMesh" id="BoxMesh_4k1dw"]
material = SubResource("ShaderMaterial_q2njf")

[node name="wrap_game" type="Node3D"]
script = ExtResource("5_wrap_game")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jv2ku")

[node name="gift_box" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 2.2806878)
mesh = SubResource("BoxMesh_4k1dw")

[node name="GripPoints" type="Node3D" parent="gift_box"]

[node name="Left" type="Node3D" parent="gift_box/GripPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6002427, 0.15999866, 0)

[node name="Right" type="Node3D" parent="gift_box/GripPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.630803, 0.29999995, 0)

[node name="Front" type="Node3D" parent="gift_box/GripPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.022223592, 0.04695916, 0.6457956)

[node name="Back" type="Node3D" parent="gift_box/GripPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05018258, 0.10872245, -0.6685653)

[node name="LeftTarget" type="Node3D" parent="gift_box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.3, 0)

[node name="RightTarget" type="Node3D" parent="gift_box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.3, 0)

[node name="player" parent="." instance=ExtResource("4_anslr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.1283913, 7.158258)
